--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,10 @@
   "author": "2U",
   "license": "UNLICENSED",
   "devDependencies": {
+    "http-server": "^0.11.1",
+    "webpack-dev-server": "^4.0.0"
+  },
+  "dependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.15.0",
@@ -16,15 +20,11 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
     "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^6.2.4"
-  },
-  "dependencies": {
+    "workbox-webpack-plugin": "^6.2.4",
     "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2"
   }
